# gagarin-hack

./: .gitignore  README.md  get_probes.sh  get_stats.sh  plot_npy.py  plot_pkt_size.py
data/Test/anomaly/: 1.ffprobe  1.samples.npy  2.ffprobe  2.samples.npy  3.ffprobe  3.samples.npy  4.ffprobe  4.samples.npy  5.ffprobe  5.samples.npy  6.ffprobe  6.samples.npy  description.txt
data/Test/not_anomaly/: 1.ffprobe  2.ffprobe  2.samples.npy  3.ffprobe  3.samples.npy  4.ffprobe  4.samples.npy
data/Train/anomaly/: 0.ffprobe  0.samples.npy  2.ffprobe  2.samples.npy  3.ffprobe  3.samples.npy  4.ffprobe  4.samples.npy  5.ffprobe  5.samples.npy  description.txt
data/Train/not_anomaly/: 0.ffprobe  0.samples.npy  1.ffprobe  1.samples.npy  2.ffprobe  3.ffprobe  4.ffprobe  4.samples.npy  5.ffprobe  5.samples.npy  6.ffprobe  6.samples.npy  7.ffprobe  8.ffprobe  8.samples.npy
detector/: CMakeLists.txt  detector.cpp  ffmpeg.h  math.h  nn_filter.h  plot.py
docker/: Dockerfile  entry.sh
